--- a/DesafioBCI/Base.lproj/Main.storyboard
+++ b/DesafioBCI/Base.lproj/Main.storyboard
@@ -74,6 +74,9 @@
                         <rightBarButtonItems>
                             <barButtonItem systemItem="trash" id="50W-lf-0Hk">
                                 <color key="tintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="limpiarBusqueda:" destination="BYZ-38-t0r" id="uC1-B0-Fu1"/>
+                                </connections>
                             </barButtonItem>
                             <barButtonItem title="Item" image="book.fill" catalog="system" id="GjY-ME-pWG"/>
                         </rightBarButtonItems>
@@ -96,7 +99,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="GGh-mO-dTs">
-                                <rect key="frame" x="20" y="94" width="374" height="138"/>
+                                <rect key="frame" x="20" y="91" width="374" height="138"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Pbs-7P-ahS">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="100"/>
@@ -144,8 +147,14 @@
                                     </label>
                                 </subviews>
                             </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.compact.down" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="mZk-Hf-0hD">
+                                <rect key="frame" x="20" y="56.5" width="374" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33.5" id="Nt0-Nv-iJf"/>
+                                </constraints>
+                            </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="r6r-ze-adN">
-                                <rect key="frame" x="0.0" y="240" width="414" height="622"/>
+                                <rect key="frame" x="0.0" y="237" width="414" height="625"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellCancionesAlbum" textLabel="cmc-uD-7kC" style="IBUITableViewCellStyleDefault" id="Be1-Hy-v2R">
@@ -175,15 +184,19 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="GGh-mO-dTs" firstAttribute="leading" secondItem="veR-3j-1GP" secondAttribute="leading" constant="20" id="1WW-6B-4f7"/>
-                            <constraint firstItem="GGh-mO-dTs" firstAttribute="top" secondItem="veR-3j-1GP" secondAttribute="top" constant="50" id="6Gh-Of-pOd"/>
+                            <constraint firstItem="r6r-ze-adN" firstAttribute="leading" secondItem="veR-3j-1GP" secondAttribute="leading" id="7gE-eh-FTU"/>
                             <constraint firstItem="GGh-mO-dTs" firstAttribute="leading" secondItem="veR-3j-1GP" secondAttribute="leading" constant="20" id="G4J-qY-nkp"/>
-                            <constraint firstItem="r6r-ze-adN" firstAttribute="trailing" secondItem="veR-3j-1GP" secondAttribute="trailing" id="YI3-Rn-HYa"/>
-                            <constraint firstItem="r6r-ze-adN" firstAttribute="top" secondItem="GGh-mO-dTs" secondAttribute="bottom" constant="8" id="c4M-8f-tys"/>
+                            <constraint firstItem="mZk-Hf-0hD" firstAttribute="leading" secondItem="veR-3j-1GP" secondAttribute="leading" constant="20" id="IWJ-lQ-rsw"/>
+                            <constraint firstItem="GGh-mO-dTs" firstAttribute="top" secondItem="mZk-Hf-0hD" secondAttribute="bottom" constant="7.5" id="OI6-IB-ycL"/>
+                            <constraint firstItem="mZk-Hf-0hD" firstAttribute="top" secondItem="veR-3j-1GP" secondAttribute="top" constant="6" id="ZIl-v6-9dc"/>
+                            <constraint firstItem="r6r-ze-adN" firstAttribute="top" secondItem="GGh-mO-dTs" secondAttribute="bottom" constant="8" id="ZUS-AM-abU"/>
+                            <constraint firstItem="GGh-mO-dTs" firstAttribute="top" secondItem="mZk-Hf-0hD" secondAttribute="bottom" constant="7.5" id="biN-nh-cqy"/>
+                            <constraint firstItem="veR-3j-1GP" firstAttribute="trailing" secondItem="mZk-Hf-0hD" secondAttribute="trailing" constant="20" id="cHG-bY-VtT"/>
                             <constraint firstItem="veR-3j-1GP" firstAttribute="trailing" secondItem="GGh-mO-dTs" secondAttribute="trailing" constant="20" id="faq-Cv-xUn"/>
-                            <constraint firstItem="r6r-ze-adN" firstAttribute="leading" secondItem="veR-3j-1GP" secondAttribute="leading" id="haT-a7-S00"/>
-                            <constraint firstItem="r6r-ze-adN" firstAttribute="leading" secondItem="veR-3j-1GP" secondAttribute="leading" id="hmk-Zl-JRk"/>
-                            <constraint firstAttribute="bottom" secondItem="r6r-ze-adN" secondAttribute="bottom" constant="34" id="iRW-id-eH2"/>
+                            <constraint firstItem="r6r-ze-adN" firstAttribute="trailing" secondItem="veR-3j-1GP" secondAttribute="trailing" id="iba-oM-3Or"/>
+                            <constraint firstItem="GGh-mO-dTs" firstAttribute="top" secondItem="mZk-Hf-0hD" secondAttribute="bottom" constant="7.5" id="shc-dX-1ea"/>
                             <constraint firstItem="veR-3j-1GP" firstAttribute="trailing" secondItem="GGh-mO-dTs" secondAttribute="trailing" constant="20" id="vwx-B3-4So"/>
+                            <constraint firstItem="r6r-ze-adN" firstAttribute="bottom" secondItem="veR-3j-1GP" secondAttribute="bottom" id="wRw-4o-8u1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="veR-3j-1GP"/>
                     </view>
@@ -220,5 +233,6 @@
     </scenes>
     <resources>
         <image name="book.fill" catalog="system" width="64" height="50"/>
+        <image name="chevron.compact.down" catalog="system" width="64" height="20"/>
     </resources>
 </document>
